--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,21 +5,14 @@ project:
 book:
   title: "Methods (BST 232) Notes"
   author: "Christian Testa"
-  # date: "8/28/2023"
   chapters:
     - index.qmd
     - week1/week1.qmd
-    # - week2.qmd
-    # - week3.qmd
-
-# bibliography: references.bib
 
 format:
   html:
-    # theme: cosmo
     theme: style.scss
+    number-depth: 0
   pdf:
     documentclass: scrreport
-  # epub:
-  #   cover-image: cover.png
   
