--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ book:
     - week6/week6.qmd
     - week7/week7.qmd
     - week8/week8.qmd
+    - week9/week9.qmd
+    - week10/week10.qmd
 
 format:
   html:
