--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,6 +21,7 @@ book:
     - week12/week12.qmd
     - week13/week13.qmd
     - week14/week14.qmd
+    - week15/week15.qmd
     - references.qmd
 
 format:
